kubernetes/argocd/argocd-app/stateful/nextcloud/stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  serviceName: nextcloud
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      automountServiceAccountToken: false
      volumes:
      - name: app
        persistentVolumeClaim:
          claimName: nextcloud-app-pvc
      - name: mnt
        persistentVolumeClaim:
          claimName: nextcloud-mnt-pvc
      containers:
      - name: nextcloud
        image: linuxserver/nextcloud:34.0.1@sha256:397d5e5bdf1d626ab3f160575f6b8415b6479f5f258607c902385e48c92f2045
        resources:
          limits:
            memory: 512Mi
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: app
          mountPath: /config
          subPath: config
        - name: app
          mountPath: /data
          subPath: data
        - name: mnt
          mountPath: /mnt
