kubernetes/argocd/argocd-app/stateful/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-vn-geo-filter@kubernetescrd,traefik-crowdsec@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
  - host: nextcloud.datrollout.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud
            port:
              name: http
